# spectrum-emulator

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  display.c  display.h  keyboard.c  keyboard.h  keyboard.test.c  main.c  memory.c  memory.h  spectrum.c  spectrum.h  tap-loader.c  tap-loader.h  tape-loader.c  tape-loader.h  test-runner.c
src/tape-formats/: tap-format.c  tap-format.h  tzx-format.c  tzx-format.h
